Add CSS to make the site look nicer
Added a styles.css file and modified the other html files to use
the stylesheet, allowing more flexible styling of the sites

--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <meta charset="UTF-8">
     <head>
-
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Classic Goulash</h1>
+        <h1 class="title">Classic Goulash</h1>
         <img src="goulash.jpg" alt="Finished dish of delicious goulash">
         <h2>Description:</h2>
         <p>This meaty goulash recipe is easy to make on the stovetop but can also be done in a slow cooker. Inspired by Paula Deen's Bobby's Goulash.</p>
