--- a/recipes/tortellini.html
+++ b/recipes/tortellini.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <meta charset="UTF-8">
     <head>
-
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Creamy Tortellini Soup with Spinach and Boursin</h1>
+        <h1 class="title">Creamy Tortellini Soup with Spinach and Boursin</h1>
         <img src="tortellini.jpg" alt="Finished dish of delicious tortellini">
         <h2>Description:</h2>
         <p>This creamy tortellini soup cooks in one pot for a fuss-free recipe. Italian sausage and Boursin cheese amp up the flavor.</p>
