--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <head>
-
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/koreanbowl.html">Korean Beef Bowl</a></li>
-            <li><a href="recipes/tortellini.html">Creamy Tortellini Soup</a></li>
-            <li><a href="recipes/goulash.html">Korean Beef Bowl</a></li>
-        </ul>
-    </body>
+  <meta charset="UTF-8" />
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1 class="title">Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/koreanbowl.html">Korean Beef Bowl</a></li>
+      <li><a href="recipes/tortellini.html">Creamy Tortellini Soup</a></li>
+      <li><a href="recipes/goulash.html">Korean Beef Bowl</a></li>
+    </ul>
+  </body>
 </html>
