--- a/recipes/koreanbowl.html
+++ b/recipes/koreanbowl.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <meta charset="UTF-8">
     <head>
-
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Easy Korean Ground Beef Bowl</h1>
+        <h1 class="title">Easy Korean Ground Beef Bowl</h1>
         <img src="bowl.jpg" alt="Finished dish of delicious korean beef">
         <h2>Description:</h2>
         <p>This Korean beef bowl is quick and easy to make. The ingredients can easily be adjusted to suit your taste. Serve over warm rice or spiralized vegetables.        </p>
